--- a/css/main-green.css
+++ b/css/main-green.css
@@ -28,19 +28,17 @@
 
 ============================================================================= */
 
-
 /* ============================================================================= 
 1. Fonts
 ============================================================================= */
 /* Font Awesome icons font */
-@import url('font-awesome.css'); /* Full icons list: http://fontawesome.io/icons/ */
+@import url("font-awesome.css"); /* Full icons list: http://fontawesome.io/icons/ */
 
 /* Material Design Iconic Font */
-@import url('material-design-iconic-font.min.css'); /* Full icons list: http://zavoloklom.github.io/material-design-iconic-font/cheatsheet.htmls */
+@import url("material-design-iconic-font.min.css"); /* Full icons list: http://zavoloklom.github.io/material-design-iconic-font/cheatsheet.htmls */
 
 /* Google fonts */
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,400i,700,700i|Montserrat:300,400,500,600,700");
-
 
 /* ============================================================================= 
 2. General styles
@@ -54,7 +52,7 @@ html {
 
 body {
   position: relative;
-  font-family: 'Roboto', Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
   color: #424242;
   margin: 0;
   height: 100%;
@@ -88,7 +86,7 @@ a {
 }
 
 a:hover {
-  color: #FF9800;
+  color: #ff9800;
   text-decoration: none;
   outline: none;
 }
@@ -97,9 +95,14 @@ a:focus {
   outline: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #212121;
-  font-family: 'Montserrat', Helvetica, sans-serif;
+  font-family: "Montserrat", Helvetica, sans-serif;
   font-weight: 700;
   line-height: 1.5em;
   margin-top: 0;
@@ -171,10 +174,11 @@ img {
   -moz-box-shadow: none;
   box-shadow: none;
   outline: none;
-  font-family: 'Roboto', Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
 }
 
-textarea.form-control, textarea.form-control:focus {
+textarea.form-control,
+textarea.form-control:focus {
   height: auto;
 }
 
@@ -313,7 +317,9 @@ textarea.form-control, textarea.form-control:focus {
 /* buttons */
 .btn-primary,
 .btn-secondary,
-button, input[type="button"], input[type="submit"] {
+button,
+input[type="button"],
+input[type="submit"] {
   text-transform: uppercase;
   font-family: inherit;
   font-size: 14px;
@@ -328,16 +334,20 @@ button, input[type="button"], input[type="submit"] {
 .btn-primary,
 .btn-primary:hover,
 .btn-primary:focus,
-button, input[type="button"], input[type="submit"] {
+button,
+input[type="button"],
+input[type="submit"] {
   background-color: #2eca7f;
   color: #fff;
   border: 0;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 0 2px 4px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .btn-primary:hover,
-button:hover, input[type="button"]:hover, input[type="submit"]:hover {
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 4px 8px rgba(0,0,0,0.3);
+button:hover,
+input[type="button"]:hover,
+input[type="submit"]:hover {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 
 .btn-secondary,
@@ -345,11 +355,11 @@ button:hover, input[type="button"]:hover, input[type="submit"]:hover {
 .btn-secondary:focus {
   background-color: #fff;
   color: #212121;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.1), 0 2px 4px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .btn-secondary:hover {
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 4px 8px rgba(0,0,0,0.3);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.3);
 }
 /* / buttons */
 
@@ -380,11 +390,12 @@ body > footer .copyrights {
 /* / copyrights block */
 /* / Footer */
 
-
 /* ============================================================================= 
 3. Page loadig animation
 ============================================================================= */
-.no-js .preloader { display: none;  }
+.no-js .preloader {
+  display: none;
+}
 .preloader {
   position: fixed;
   left: 0px;
@@ -404,7 +415,7 @@ body > footer .copyrights {
   color: inherit;
   opacity: 1;
   transition: opacity 0.3s;
-  transform: translate3d(-50%,-50%,0);
+  transform: translate3d(-50%, -50%, 0);
 }
 
 .preloader-spinner {
@@ -417,7 +428,7 @@ body > footer .copyrights {
 
 .preloader-spinner:before,
 .preloader-spinner:after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: 0;
@@ -429,30 +440,30 @@ body > footer .copyrights {
 }
 
 .preloader-spinner:before {
-  opacity: .2;
+  opacity: 0.2;
 }
 
 .preloader-spinner:after {
   border-color: transparent;
   border-top-color: #2eca7f;
-  -webkit-animation: rotation 0.82s infinite cubic-bezier(0.6,0.3,0.3,0.6);
-  animation: rotation 0.82s infinite cubic-bezier(0.6,0.3,0.3,0.6);
+  -webkit-animation: rotation 0.82s infinite cubic-bezier(0.6, 0.3, 0.3, 0.6);
+  animation: rotation 0.82s infinite cubic-bezier(0.6, 0.3, 0.3, 0.6);
 }
 
-@-webkit-keyframes rotation{
-  0%
-  {
-    -webkit-transform:rotate(0deg)
+@-webkit-keyframes rotation {
+  0% {
+    -webkit-transform: rotate(0deg);
   }
-  100%{
-    -webkit-transform:rotate(360deg)
+  100% {
+    -webkit-transform: rotate(360deg);
   }
 }
-@keyframes rotation{
-  0%{
-    transform:rotate(0deg)
-  }100%{
-    transform:rotate(360deg)
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 
@@ -506,13 +517,13 @@ body > footer .copyrights {
   background-color: #fff;
   overflow: hidden;
   border-radius: 15px;
-  -webkit-box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
-  -webkit-transform: translate3d(0,0,0);
-  -o-transform: translate3d(0,0,0);
-  -moz-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
+  -webkit-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
+  -webkit-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   -ms-transform: none;
 }
 
@@ -626,9 +637,9 @@ body > footer .copyrights {
   .header.sticked {
     background-color: #fff;
     height: 60px;
-    -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
+    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -643,7 +654,7 @@ body > footer .copyrights {
   color: #49515d;
   font-size: 20px;
   font-weight: 500;
-  font-family: 'Montserrat', Helvetica, sans-serif;
+  font-family: "Montserrat", Helvetica, sans-serif;
   line-height: 1;
   margin: 38px 0 0;
 }
@@ -720,7 +731,7 @@ body > footer .copyrights {
   right: 0;
   left: 0;
   bottom: 0;
-  content: '';
+  content: "";
   width: 0;
   height: 2px;
   margin: 0 auto;
@@ -764,9 +775,6 @@ body > footer .copyrights {
   line-height: 50px;
 }
 /* /Mobile menu toggle */
-
-
-
 
 /* ============================================================================= 
 6. Site content
@@ -829,8 +837,6 @@ body > footer .copyrights {
   background-color: #fff;
 }
 
-
-
 /* ============================================================================= 
 7. Subpages
 ============================================================================= */
@@ -855,9 +861,9 @@ body > footer .copyrights {
   margin-bottom: -75px;
   border: 3px solid #fff;
   background-color: #fff;
-  -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -909,15 +915,15 @@ body > footer .copyrights {
   margin: 0 1px;
   color: #9e9e9e;
   text-align: center;
-  -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
 .start-page-content .social-links a:hover {
-  -webkit-box-shadow: 0px 6px 18px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 6px 18px 0px rgba(0,0,0,0.2);
-  box-shadow: 0px 6px 18px 0px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 6px 18px 0px rgba(0, 0, 0, 0.2);
 }
 
 .start-page-content .social-links a i {
@@ -964,10 +970,6 @@ body > footer .copyrights {
   color: #9e9e9e;
 }
 
-
-
-
-
 /* =======================================
 7.2. Resume subpage
 ======================================= */
@@ -983,11 +985,11 @@ body > footer .copyrights {
   margin-bottom: 20px;
   background-color: #fff;
   border-left: 2px solid #2eca7f;
-  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
 }
 
 .timeline-item:hover {
-  box-shadow: 0px 0px 8px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
 .timeline-item:last-child {
@@ -995,7 +997,7 @@ body > footer .copyrights {
 }
 
 .timeline-item:before {
-  content: '';
+  content: "";
   display: inline-block;
   position: absolute;
   background-color: #fff;
@@ -1009,7 +1011,7 @@ body > footer .copyrights {
 }
 
 .timeline-item:after {
-  content: '';
+  content: "";
   display: inline-block;
   position: absolute;
   background-color: #2eca7f;
@@ -1047,17 +1049,15 @@ body > footer .copyrights {
   border-left: 1px solid #e0e0e0;
 }
 
-
-
 /* Skills */
 .skills-info {
   margin-bottom: 30px;
 }
 
-.skills-info h4 { 
+.skills-info h4 {
   font-size: 0.8em;
   line-height: 1.1em;
-  position: relative; 
+  position: relative;
   margin: 0 0 5px;
 }
 
@@ -1121,14 +1121,16 @@ body > footer .copyrights {
 .skill-percentage.skill-8 {
   width: 77%;
 }
+
+/*Skill 9*/
+.skill-percentage.skill-9 {
+  width: 40%;
+}
 /* Skills */
 
 .download-resume {
   margin-top: 50px;
 }
-
-
-
 
 /* =======================================
 7.3. Services subpage
@@ -1279,7 +1281,7 @@ body > footer .copyrights {
 .testimonial-author {
   display: inline-block;
   font-size: 15px;
-  font-family: 'Roboto', Helvetica, sans-serif;
+  font-family: "Roboto", Helvetica, sans-serif;
   color: #212121;
   margin: 0;
   font-weight: 400;
@@ -1326,9 +1328,9 @@ body > footer .copyrights {
 
 .testimonial-picture img {
   width: 100%;
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
-  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.2);
+  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
   border-radius: 100px;
 }
 
@@ -1339,7 +1341,7 @@ body > footer .copyrights {
   margin: 0;
   text-transform: uppercase;
   font-style: italic;
-  font-weight: lighter
+  font-weight: lighter;
 }
 /* /Testimonials */
 
@@ -1384,7 +1386,7 @@ body > footer .copyrights {
 }
 
 .lm-pricing .lm-package-wrap.highlight-col .lm-heading-row span:after {
-  content: '';
+  content: "";
   height: 2px;
   margin-top: 0;
   background-color: #2eca7f;
@@ -1418,9 +1420,6 @@ body > footer .copyrights {
   padding: 10px 0 20px;
 }
 /* /Pricing */
-
-
-
 
 /* =======================================
 7.4. Portfolio subpage
@@ -1502,7 +1501,7 @@ body > footer .copyrights {
 }
 
 .portfolio-grid figure a div:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -1551,15 +1550,16 @@ body > footer .copyrights {
   padding: 10px 0;
   text-transform: uppercase;
   font-weight: normal;
-  color: rgba(255,255,255,0.9);
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
-  border-bottom: 1px solid rgba(255,255,255,0.5);
-  -webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);
-  -moz-box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);
-  box-shadow: 0 1px 0 rgba(0,0,0,0.1), 0 -10px 0 rgba(255,255,255,0.3);
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1),
+    0 -10px 0 rgba(255, 255, 255, 0.3);
+  -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1),
+    0 -10px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1), 0 -10px 0 rgba(255, 255, 255, 0.3);
 }
 /* End of Direction-Aware Hover Effect */
-
 
 /* =======================================
 7.5. Blog subpage
@@ -1586,15 +1586,15 @@ body > footer .copyrights {
   padding: 0;
   background: #fff;
   text-align: center;
-  -webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0 1px 5px rgba(0,0,0,0.1);
-  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 .blog-card:hover {
-  -webkit-box-shadow: 0 1px 15px rgba(0,0,0,0.11);
-  -moz-box-shadow: 0 1px 15px rgba(0,0,0,0.11);
-  box-shadow: 0 1px 15px rgba(0,0,0,0.11);
+  -webkit-box-shadow: 0 1px 15px rgba(0, 0, 0, 0.11);
+  -moz-box-shadow: 0 1px 15px rgba(0, 0, 0, 0.11);
+  box-shadow: 0 1px 15px rgba(0, 0, 0, 0.11);
 }
 
 .blog-card .post-image {
@@ -1647,9 +1647,9 @@ body > footer .copyrights {
 .blog-card .media-block a .mask {
   position: absolute;
   background: #4f565e;
-  background: rgba(79,86,94,0.6);
+  background: rgba(79, 86, 94, 0.6);
   display: inline-block;
-  font-family: 'FontAwesome';
+  font-family: "FontAwesome";
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -1719,7 +1719,8 @@ body > footer .copyrights {
   font-weight: 400;
 }
 
-.blog-card .post-meta .item, .post-meta .item a {
+.blog-card .post-meta .item,
+.post-meta .item a {
   color: #a6a6a6;
 }
 
@@ -1732,8 +1733,6 @@ body > footer .copyrights {
 .post-meta .item:before {
   padding-right: 5px;
 }
-
-
 
 /* =======================================
 7.6. Contact subpage
@@ -1794,7 +1793,6 @@ body > footer .copyrights {
   margin: 15px 0 30px;
 }
 /* / Google Map */
-
 
 /* ============================================================================= 
 8. Sliders
@@ -1866,7 +1864,7 @@ body > footer .copyrights {
   -webkit-tap-highlight-color: transparent;
 }
 
-.portfolio-page-carousel .owl-nav [class*='owl-'] {
+.portfolio-page-carousel .owl-nav [class*="owl-"] {
   color: #9e9e9e;
   margin: 0;
   padding: 4px 7px;
@@ -1880,7 +1878,7 @@ body > footer .copyrights {
   transition: all 0.3s ease-in-out;
 }
 
-.portfolio-page-carousel .owl-nav [class*='owl-']:before {
+.portfolio-page-carousel .owl-nav [class*="owl-"]:before {
   display: block;
   font-family: FontAwesome;
   font-size: 30px;
@@ -1929,7 +1927,8 @@ body > footer .copyrights {
   display: inline-block;
 }
 
-.portfolio-page-carousel .owl-dots .owl-dot.active span, .portfolio-page-carousel .owl-dots .owl-dot:hover span {
+.portfolio-page-carousel .owl-dots .owl-dot.active span,
+.portfolio-page-carousel .owl-dots .owl-dot:hover span {
   background: #9e9e9e;
 }
 
@@ -1945,7 +1944,6 @@ body > footer .copyrights {
   border-radius: 30px;
 }
 /* Portfolio Carousel */
-
 
 /* ============================================================================= 
 9. Portfolio Full info page
@@ -2038,7 +2036,7 @@ body > footer .copyrights {
 }
 
 .project-general-info li {
-  margin : 0 0 10px;
+  margin: 0 0 10px;
 }
 
 .project-general-info .fa {
@@ -2125,9 +2123,9 @@ body > footer .copyrights {
   max-width: 1032px;
   margin: 0 auto;
   border-radius: 15px;
-  -webkit-box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
-  -moz-box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
-  box-shadow: 0px 15px 25px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
 }
 
 .single-page-content .content-area .page-content {
@@ -2163,7 +2161,9 @@ blockquote p:last-child {
   margin-bottom: 0;
 }
 
-blockquote footer, blockquote small, blockquote .small {
+blockquote footer,
+blockquote small,
+blockquote .small {
   color: #9e9e9e;
 }
 
@@ -2181,7 +2181,7 @@ blockquote footer, blockquote small, blockquote .small {
 }
 
 .entry-meta a:hover {
-  color: #F4511E;
+  color: #f4511e;
 }
 
 .entry-meta.entry-tags-share {
@@ -2292,9 +2292,9 @@ blockquote footer, blockquote small, blockquote .small {
     z-index: 1001;
     overflow: auto;
     background-color: #2eca7f;
-    -webkit-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2);
-    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
     -webkit-transition: all 0.44s ease-in-out;
     -moz-transition: all 0.44s ease-in-out;
     -o-transition: all 0.44s ease-in-out;
@@ -2327,9 +2327,9 @@ blockquote footer, blockquote small, blockquote .small {
     right: 0;
     height: 50px;
     background-color: #2eca7f;
-    -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-    -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
-    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.1);
+    -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
     z-index: 1000;
   }
 
@@ -2344,7 +2344,7 @@ blockquote footer, blockquote small, blockquote .small {
     color: #fff;
     font-size: 18px;
     font-weight: 400;
-    font-family: 'Montserrat', Helvetica, sans-serif;
+    font-family: "Montserrat", Helvetica, sans-serif;
     margin: 0;
     line-height: 50px;
   }
@@ -2472,7 +2472,7 @@ blockquote footer, blockquote small, blockquote .small {
 
   .ajax-page-wrapper {
     padding-left: 20px;
-    padding-right: 20px; 
+    padding-right: 20px;
   }
 
   .lm-pricing .lm-package {
