Setting up mobile and color theme

--- a/css/main-green.css
+++ b/css/main-green.css
@@ -53,13 +53,13 @@ html {
 body {
   position: relative;
   font-family: "Roboto", Helvetica, sans-serif;
-  color: #424242;
+  color: #fff;
   margin: 0;
   height: 100%;
   width: 100%;
   font-size: 15px;
   line-height: 1.6em;
-  background-color: #f5f5f5;
+  background-color: #191414;
   overflow-x: hidden;
   overflow-y: auto;
   background-image: url(../images/main_bg.png);
@@ -75,7 +75,7 @@ body.ajax-page-visible {
 }
 
 a {
-  color: #2eca7f;
+  color: #1db954;
   text-decoration: none;
   outline: none;
   -webkit-transition: all 0.3s ease-in-out;
@@ -101,7 +101,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #212121;
+  color: #fff;
   font-family: "Montserrat", Helvetica, sans-serif;
   font-weight: 700;
   line-height: 1.5em;
@@ -189,7 +189,7 @@ textarea.form-control:focus {
   left: 50%;
   right: 50%;
   bottom: 0;
-  background: #2eca7f;
+  background: #1db954;
   height: 2px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -294,7 +294,7 @@ textarea.form-control:focus {
 }
 
 .form-group-with-icon.form-group-focus i {
-  color: #2eca7f;
+  color: #1db954;
 }
 /* /Form controls */
 
@@ -328,7 +328,7 @@ input[type="submit"] {
   padding: 0 1.5em;
   outline: none;
   border: 0;
-  border-radius: 3px;
+  border-radius: 25px;
 }
 
 .btn-primary,
@@ -337,8 +337,8 @@ input[type="submit"] {
 button,
 input[type="button"],
 input[type="submit"] {
-  background-color: #2eca7f;
-  color: #fff;
+  background-color: #1db954;
+  color: #191414;
   border: 0;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.3);
 }
@@ -353,8 +353,8 @@ input[type="submit"]:hover {
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-  background-color: #fff;
-  color: #212121;
+  background-color: #1db954;
+  color: #191414;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
@@ -364,11 +364,11 @@ input[type="submit"]:hover {
 /* / buttons */
 
 .border-top {
-  border-top: 2px solid #2eca7f;
+  border-top: 2px solid #1db954;
 }
 
 .border-bottom {
-  border-bottom: 2px solid #2eca7f;
+  border-bottom: 2px solid #1db954;
 }
 
 /* Footer */
@@ -403,7 +403,7 @@ body > footer .copyrights {
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: #fff;
+  background: #191414;
 }
 
 .preloader-animation {
@@ -445,7 +445,7 @@ body > footer .copyrights {
 
 .preloader-spinner:after {
   border-color: transparent;
-  border-top-color: #2eca7f;
+  border-top-color: #1db954;
   -webkit-animation: rotation 0.82s infinite cubic-bezier(0.6, 0.3, 0.3, 0.6);
   animation: rotation 0.82s infinite cubic-bezier(0.6, 0.3, 0.3, 0.6);
 }
@@ -514,7 +514,7 @@ body > footer .copyrights {
 
 .pt-page .section-inner {
   position: relative;
-  background-color: #fff;
+  background-color: #191414;
   overflow: hidden;
   border-radius: 15px;
   -webkit-box-shadow: 0px 15px 25px 0px rgba(0, 0, 0, 0.1);
@@ -566,7 +566,7 @@ body > footer .copyrights {
   left: 0;
   width: 100%;
   background: #da475c;
-  color: #fff;
+  color: #191414;
   text-align: center;
 }
 
@@ -635,7 +635,7 @@ body > footer .copyrights {
 
 @media only screen and (min-width: 991px) {
   .header.sticked {
-    background-color: #fff;
+    background-color: #191414;
     height: 60px;
     -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
@@ -651,7 +651,7 @@ body > footer .copyrights {
 }
 
 .site-title {
-  color: #49515d;
+  color: #1db954;
   font-size: 20px;
   font-weight: 500;
   font-family: "Montserrat", Helvetica, sans-serif;
@@ -660,7 +660,7 @@ body > footer .copyrights {
 }
 
 .site-title span {
-  color: #2eca7f;
+  color: #1db954;
 }
 
 .header.sticked .site-title {
@@ -705,7 +705,6 @@ body > footer .copyrights {
   padding: 8px 0;
   margin: 0 20px;
   text-align: center;
-  color: #49515d;
   font-size: 15px;
   line-height: 1;
   font-weight: 400;
@@ -717,12 +716,14 @@ body > footer .copyrights {
 
 .site-main-menu li:last-child a {
   margin-right: 0;
+  color: #1db954;
 }
 
 .site-main-menu li a:hover,
 .site-main-menu li.active a {
   background-color: transparent;
   opacity: 1;
+  color: #1db954;
 }
 
 .site-main-menu li a:after {
@@ -735,7 +736,8 @@ body > footer .copyrights {
   width: 0;
   height: 2px;
   margin: 0 auto;
-  background-color: #2eca7f;
+  background-color: #1db954;
+  color: #fff;
   -webkit-transition: all 0.15s ease-in-out;
   -moz-transition: all 0.15s ease-in-out;
   -o-transition: all 0.15s ease-in-out;
@@ -746,6 +748,7 @@ body > footer .copyrights {
 .site-main-menu li a:hover:after,
 .site-main-menu li.active a:after {
   width: 25px;
+  color: #fff;
 }
 
 .menu-icon {
@@ -770,7 +773,7 @@ body > footer .copyrights {
 }
 
 .menu-toggle i {
-  color: #fff;
+  color: #191414;
   font-size: 21px;
   line-height: 50px;
 }
@@ -796,7 +799,7 @@ body > footer .copyrights {
 }
 
 .block-title h3 span {
-  color: #2eca7f;
+  color: #1db954;
 }
 
 .custom-page-content .block {
@@ -804,7 +807,7 @@ body > footer .copyrights {
 }
 
 .custom-page-content .page-header {
-  background-color: #fff;
+  background-color: #191414;
   border: 0;
   text-align: center;
   padding: 30px 50px;
@@ -817,7 +820,7 @@ body > footer .copyrights {
 }
 
 .custom-page-content .page-header.color-1 {
-  background-color: #2eca7f;
+  background-color: #1db954;
   background-image: url(../images/sp_main_bg.png);
   background-size: cover;
   -webkit-background-size: cover;
@@ -830,11 +833,11 @@ body > footer .copyrights {
 .custom-page-content .page-header.color-2 h2,
 .custom-page-content .page-header.color-3 h2,
 .custom-page-content .page-header.color-4 h2 {
-  color: #fff;
+  color: #191414;
 }
 
 .custom-page-content .page-content {
-  background-color: #fff;
+  background-color: #191414;
 }
 
 /* ============================================================================= 
@@ -845,7 +848,7 @@ body > footer .copyrights {
 ======================================= */
 .start-page-content .page-header {
   position: relative;
-  background-color: #2eca7f;
+  background-color: #1db954;
   padding: 50px;
   margin-bottom: 25px;
   background-image: url(../images/sp_main_bg.png);
@@ -859,8 +862,8 @@ body > footer .copyrights {
 .start-page-content .page-header .photo {
   max-width: 280px;
   margin-bottom: -75px;
-  border: 3px solid #fff;
-  background-color: #fff;
+  border: 3px solid #191414;
+  background-color: #191414;
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
@@ -887,14 +890,14 @@ body > footer .copyrights {
 }
 
 .start-page-content .page-header .title-block h1 {
-  color: #fff;
+  color: #191414;
   font-size: 54px;
   font-weight: 700;
   margin: 30px 0 0;
 }
 
 .start-page-content .page-header .title-block .sp-subtitle {
-  color: #fff;
+  color: #191414;
   font-size: 18px;
   margin: 0;
 }
@@ -911,9 +914,9 @@ body > footer .copyrights {
   width: 36px;
   height: 36px;
   border-radius: 24px;
-  background-color: #fff;
+  background-color: #191414;
   margin: 0 1px;
-  color: #9e9e9e;
+  color: #fff;
   text-align: center;
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
@@ -983,8 +986,8 @@ body > footer .copyrights {
   padding: 15px 20px 10px;
   margin-left: 20px;
   margin-bottom: 20px;
-  background-color: #fff;
-  border-left: 2px solid #2eca7f;
+  background-color: #191414;
+  border-left: 2px solid #1db954;
   box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
 }
 
@@ -1000,13 +1003,13 @@ body > footer .copyrights {
   content: "";
   display: inline-block;
   position: absolute;
-  background-color: #fff;
+  background-color: #191414;
   border-radius: 10px;
   width: 12px;
   height: 12px;
   top: 20px;
   left: -29px;
-  border: 2px solid #2eca7f;
+  border: 2px solid #1db954;
   z-index: 2;
 }
 
@@ -1014,7 +1017,7 @@ body > footer .copyrights {
   content: "";
   display: inline-block;
   position: absolute;
-  background-color: #2eca7f;
+  background-color: #1db954;
   border-radius: 10px;
   width: 29px;
   height: 2px;
@@ -1034,7 +1037,7 @@ body > footer .copyrights {
   display: inline-block;
   font-size: 12px;
   line-height: 1.2em;
-  color: #2eca7f;
+  color: #1db954;
   margin-bottom: 8px;
 }
 
@@ -1073,7 +1076,7 @@ body > footer .copyrights {
 }
 
 .skill-percentage {
-  background-color: #2eca7f;
+  background-color: #1db954;
   height: 10px;
   padding: 0;
 }
@@ -1181,8 +1184,8 @@ body > footer .copyrights {
 .service-icon {
   font-size: 48px;
   line-height: 80px;
-  color: #fff;
-  background-color: #2eca7f;
+  color: #191414;
+  background-color: #1db954;
   width: 80px;
   height: 80px;
   border-radius: 100px;
@@ -1234,7 +1237,7 @@ body > footer .copyrights {
   width: 100%;
   display: block;
   margin: 0;
-  background: #fff;
+  background: #191414;
   padding: 20px 10px 15px;
 }
 
@@ -1257,7 +1260,7 @@ body > footer .copyrights {
   font-weight: 400;
   display: block;
   margin: 10px 0;
-  color: #2eca7f;
+  color: #1db954;
 }
 /* /Fun Facts */
 
@@ -1282,7 +1285,7 @@ body > footer .copyrights {
   display: inline-block;
   font-size: 15px;
   font-family: "Roboto", Helvetica, sans-serif;
-  color: #212121;
+  color: #1db954;
   margin: 0;
   font-weight: 400;
 }
@@ -1305,7 +1308,7 @@ body > footer .copyrights {
   padding: 2.2em 1.2em 1.5em;
   font-style: italic;
   border: 1px solid #e0e0e0;
-  border-top: 2px solid #2eca7f;
+  border-top: 2px solid #1db954;
   width: 100%;
   position: relative;
   margin: 0;
@@ -1389,7 +1392,7 @@ body > footer .copyrights {
   content: "";
   height: 2px;
   margin-top: 0;
-  background-color: #2eca7f;
+  background-color: #1db954;
   position: absolute;
   left: 0;
   bottom: -3px;
@@ -1463,8 +1466,8 @@ body > footer .copyrights {
 
 .portfolio-filters li.active a,
 .portfolio-filters li.active a:hover {
-  background-color: #2eca7f;
-  color: #fff;
+  background-color: #1db954;
+  color: #191414;
 }
 
 .portfolio-grid figure {
@@ -1492,7 +1495,7 @@ body > footer .copyrights {
   background: transparent;
   width: 100%;
   height: 100%;
-  color: #fff;
+  color: #191414;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -1507,7 +1510,7 @@ body > footer .copyrights {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #2eca7f;
+  background-color: #1db954;
   opacity: 0.8;
   z-index: 0;
 }
@@ -1525,19 +1528,19 @@ body > footer .copyrights {
   display: block;
   font-size: 1rem;
   margin: 10px 0;
-  color: #fff;
+  color: #191414;
   z-index: 2;
 }
 
 .portfolio-grid figure a div small {
-  color: #fff;
+  color: #191414;
   position: absolute;
   bottom: 10px;
   left: 20px;
 }
 
 .portfolio-grid figure a div i {
-  color: #fff;
+  color: #191414;
   position: absolute;
   font-size: 18px;
   bottom: 14px;
@@ -1584,7 +1587,7 @@ body > footer .copyrights {
   display: block;
   position: relative;
   padding: 0;
-  background: #fff;
+  background: #191414;
   text-align: center;
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
@@ -1617,7 +1620,7 @@ body > footer .copyrights {
 
 .blog-card .post-date {
   display: inline-block;
-  background-color: #fff;
+  background-color: #191414;
   border: 1px solid #e0e0e0;
   padding: 0.3em;
   text-align: center;
@@ -1634,7 +1637,7 @@ body > footer .copyrights {
 
 .blog-card .post-date span {
   display: block;
-  color: #2eca7f;
+  color: #1db954;
   line-height: 1;
   font-size: 12px;
   margin: 0;
@@ -1681,7 +1684,7 @@ body > footer .copyrights {
   font-size: 40px;
   text-align: center;
   content: "\f0f6";
-  color: #fff;
+  color: #191414;
 }
 
 .blog-card .media-block a:hover .mask {
@@ -1774,7 +1777,7 @@ body > footer .copyrights {
 .contact-info-block i {
   position: relative;
   font-size: 18px;
-  color: #2eca7f;
+  color: #1db954;
   text-align: center;
   line-height: 36px;
 }
@@ -1823,8 +1826,8 @@ body > footer .copyrights {
 
 .testimonials.owl-carousel .owl-nav .owl-prev:hover,
 .testimonials.owl-carousel .owl-nav .owl-next:hover {
-  color: #fff;
-  background-color: #2eca7f;
+  color: #191414;
+  background-color: #1db954;
 }
 
 .testimonials.owl-carousel .owl-nav .owl-prev:before,
@@ -1868,7 +1871,7 @@ body > footer .copyrights {
   color: #9e9e9e;
   margin: 0;
   padding: 4px 7px;
-  background: #fff;
+  background: #191414;
   display: inline-block;
   cursor: pointer;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1950,7 +1953,7 @@ body > footer .copyrights {
 ============================================================================= */
 .page-ajax-loaded {
   position: fixed;
-  background-color: #fff;
+  background-color: #191414;
   padding: 10px 0;
   top: 0;
   bottom: 0;
@@ -1967,7 +1970,7 @@ body > footer .copyrights {
 .ajax-page-content {
   height: 100%;
   overflow: auto;
-  background-color: #fff;
+  background-color: #191414;
 }
 
 .ajax-page-wrapper {
@@ -1995,7 +1998,7 @@ body > footer .copyrights {
 }
 
 .ajax-page-nav > div.nav-item a:hover {
-  color: #2eca7f;
+  color: #1db954;
 }
 
 .ajax-page-nav > div.nav-item a i {
@@ -2040,7 +2043,7 @@ body > footer .copyrights {
 }
 
 .project-general-info .fa {
-  color: #2eca7f;
+  color: #1db954;
   margin-right: 5px;
 }
 
@@ -2059,15 +2062,15 @@ body > footer .copyrights {
   width: 28px;
   height: 28px;
   color: #9e9e9e;
-  background-color: #fff;
+  background-color: #191414;
   border: 1px solid #e0e0e0;
   border-radius: 0;
   text-align: center;
 }
 
 .share-buttons a:hover {
-  color: #fff;
-  background-color: #2eca7f;
+  color: #191414;
+  background-color: #1db954;
   border-color: transparent;
 }
 
@@ -2118,7 +2121,7 @@ body > footer .copyrights {
 
 .single-page-content .content-area {
   position: relative;
-  background-color: #fff;
+  background-color: #191414;
   overflow: hidden;
   max-width: 1032px;
   margin: 0 auto;
@@ -2146,14 +2149,14 @@ body > footer .copyrights {
 
 .blog-post-content {
   position: relative;
-  background-color: #fff;
+  background-color: #191414;
   padding: 30px;
   margin: -50px 40px 0;
 }
 
 blockquote {
   margin: 20px 0;
-  border-left: 3px solid #2eca7f;
+  border-left: 3px solid #1db954;
   font-style: italic;
 }
 
@@ -2198,7 +2201,7 @@ blockquote .small {
 }
 
 .entry-meta.entry-tags-share .share-buttons a:hover {
-  color: #fff;
+  color: #191414;
 }
 
 .entry-meta.entry-tags-share .post-info span {
@@ -2272,6 +2275,7 @@ blockquote .small {
   .mobile-visible {
     display: block;
     visibility: visible;
+    color: #000;
   }
 
   .mobile-hidden {
@@ -2291,7 +2295,7 @@ blockquote .small {
     top: 50px;
     z-index: 1001;
     overflow: auto;
-    background-color: #2eca7f;
+    background-color: #191414;
     -webkit-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.2);
@@ -2316,6 +2320,7 @@ blockquote .small {
 
   .site-title {
     font-size: 24px;
+    color: #fff;
   }
 
   .mobile-header {
@@ -2326,7 +2331,7 @@ blockquote .small {
     left: 0;
     right: 0;
     height: 50px;
-    background-color: #2eca7f;
+    background-color: #1db954;
     -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
@@ -2341,7 +2346,7 @@ blockquote .small {
   .mobile-site-title {
     display: inline-block;
     float: left;
-    color: #fff;
+    color: #191414;
     font-size: 18px;
     font-weight: 400;
     font-family: "Montserrat", Helvetica, sans-serif;
@@ -2351,6 +2356,7 @@ blockquote .small {
 
   .site-title-block .site-description {
     display: none;
+    color: #fff;
   }
 
   .subpages {
@@ -2381,6 +2387,7 @@ blockquote .small {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
+    color: #fff;
   }
 
   .section-title-block {
@@ -2450,7 +2457,7 @@ blockquote .small {
 
   .site-main-menu li a,
   .site-main-menu li a:hover {
-    color: #fff;
+    color: #1db954;
     padding: 15px 10px;
     margin: 0;
   }
@@ -2459,7 +2466,7 @@ blockquote .small {
   .site-main-menu li a:hover:after {
     width: 25px;
     bottom: 8px;
-    background-color: #fff;
+    background-color: #1db954;
   }
 
   .home-page-block h2 {
