--- a/css/main-green.css
+++ b/css/main-green.css
@@ -59,10 +59,9 @@ body {
   width: 100%;
   font-size: 15px;
   line-height: 1.6em;
-  background-color: #191414;
+  background-color: #3e3e42;
   overflow-x: hidden;
   overflow-y: auto;
-  background-image: url(../images/main_bg.png);
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: fixed;
@@ -821,7 +820,6 @@ body > footer .copyrights {
 
 .custom-page-content .page-header.color-1 {
   background-color: #1db954;
-  background-image: url(../images/sp_main_bg.png);
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: scroll;
@@ -833,7 +831,7 @@ body > footer .copyrights {
 .custom-page-content .page-header.color-2 h2,
 .custom-page-content .page-header.color-3 h2,
 .custom-page-content .page-header.color-4 h2 {
-  color: #191414;
+  color: #fff;
 }
 
 .custom-page-content .page-content {
@@ -851,7 +849,6 @@ body > footer .copyrights {
   background-color: #1db954;
   padding: 50px;
   margin-bottom: 25px;
-  background-image: url(../images/sp_main_bg.png);
   background-size: cover;
   -webkit-background-size: cover;
   background-attachment: scroll;
@@ -862,7 +859,7 @@ body > footer .copyrights {
 .start-page-content .page-header .photo {
   max-width: 280px;
   margin-bottom: -75px;
-  border: 3px solid #191414;
+  //border: 3px solid #191414;
   background-color: #191414;
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
@@ -890,14 +887,14 @@ body > footer .copyrights {
 }
 
 .start-page-content .page-header .title-block h1 {
-  color: #191414;
+  color: #fff;
   font-size: 54px;
   font-weight: 700;
   margin: 30px 0 0;
 }
 
 .start-page-content .page-header .title-block .sp-subtitle {
-  color: #191414;
+  color: #fff;
   font-size: 18px;
   margin: 0;
 }
@@ -914,7 +911,7 @@ body > footer .copyrights {
   width: 36px;
   height: 36px;
   border-radius: 24px;
-  background-color: #191414;
+  background-color: #3e3e42;
   margin: 0 1px;
   color: #fff;
   text-align: center;
