--- a/css/main-green.css
+++ b/css/main-green.css
@@ -125,6 +125,7 @@ img {
   height: auto;
   border: 0;
   -ms-interpolation-mode: bicubic;
+  border-radius: 150px;
 }
 
 .page {
@@ -859,7 +860,8 @@ body > footer .copyrights {
 .start-page-content .page-header .photo {
   max-width: 280px;
   margin-bottom: -75px;
-  //border: 3px solid #191414;
+  border: 4px solid #fff;
+  border-radius: 150px;
   background-color: #191414;
   -webkit-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.1);
